# mimir

./: .dockerignore  .env.development  .env.example  .env.production.example  .gitignore  AI_ANALYSIS_README.md  API_SOURCES_GUIDE.md  BROADCAST_INDUSTRY_DESIGN.md  CLAUDE.md  CLEAN_ARCHITECTURE_IMPLEMENTATION.md  DEVELOPMENT_ROADMAP.md  Dockerfile  Dockerfile.analytics  Dockerfile.api  Dockerfile.worker  EPIC2_COMPLETE_SUMMARY.md  EPIC2_COMPLETION_REPORT.md  EPIC2_FINAL_SUMMARY.md  EPIC2_IMPLEMENTATION_SUMMARY.md  EPIC3_COMPLETION_SUMMARY.md  EPIC4_TECHNICAL_DEBT_ANALYSIS.md  EPIC5_TECHNICAL_DEBT_REPORT.md  EPIC5_TECHNICAL_DEBT_SUMMARY.md  EPIC6_COMPLETION_SUMMARY.md  EPIC6_IMPLEMENTATION_SUMMARY.md  EPIC7_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  MIMIR_STATUS_UPDATE.md  NETFLIX_UI_README.md  PHASE_1_SECURITY_COMPLETE.md  PLAYWRIGHT_ARCHITECTURE_ANALYSIS.md  PLAYWRIGHT_IMPLEMENTATION_SUMMARY.md  PLAYWRIGHT_INTEGRATION_GUIDE.md  PLAYWRIGHT_SETUP_COMPLETE.md  PROXY_PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SECURITY.md  TECHNICAL_DEBT_ANALYSIS.md  TECHNICAL_DEBT_ASSESSMENT_COMPLETE.md  (+136 more)
.github/workflows/: ci-cd.yml  performance.yml  quality-gates.yml  security-scan.yml  security.yml
analytics/: API_DOCUMENTATION.md  __init__.py  analytics_validator.py  article_clustering.py  async_operations.py  code_complexity_analyzer.py  config.py  dashboard_server.py  data_exporter.py  data_warehouse.py  exceptions.py  feature_engineering.py  metrics_collector.py  ml_infrastructure.py  monitoring.py  performance_optimizer.py  predictive_analytics.py  recommendation_engine.py  report_generator.py  report_scheduler.py  trend_analyzer.py  utils.py
analytics/tests/: __init__.py  conftest.py  test_analytics_validator.py  test_utils.py
api/: __init__.py  app.py  dependencies.py  middleware.py  models.py
api/decorators/: feature_flags.py
api/middleware/: usage_tracking.py
api/models/: dashboard.py
api/routers/: __init__.py  advanced_nlu.py  analytics.py  api_keys.py  articles.py  auth.py  clustering.py  content_generation.py  dashboards.py  keywords.py  notifications.py  organizations.py  recommendations.py  saved_search_analytics.py  saved_searches.py  search.py  sources.py  subscriptions.py  summarization.py  translation.py  usage.py  users.py  webhooks.py
api/utils/: __init__.py  bulk_operations.py  filtering.py  pagination.py  sorting.py  validation.py
auth/: __init__.py  api_key_manager.py  auth_manager.py  decorators.py  jwt_handler.py  rbac.py  tenant_context.py
config/docker/: healthcheck.sh  resource-limits.yml
config/nginx/: nginx.conf
config/pgbouncer/: pgbouncer.ini  userlist.txt
docs/: DEVELOPMENT_ROADMAP.md  ai-coding-guidelines.md  analytics_documentation.md  architecture.md  code-generation-guidelines.md  deployment-guide.md  epic1-completion-checklist.md  epic1-technical-debt-report.md  postgres-setup.md  postgresql-migration-guide.md  prompt-engineering.md
docs/runbooks/: incident-response.md
k8s/: observability-stack.yaml
k8s/argocd/: application.yaml  appproject.yaml
k8s/base/: analytics-deployment.yaml  api-deployment.yaml  backup-restore.yaml  configmap.yaml  custom-metrics.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  (+9 more)
migrations/: env.py
mimir/: __init__.py  __main__.py
mimir_scrapy/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
performance/: monitoring.py  optimizer.py
scripts/: fix_common_issues.py  security_config.py
security/: security_scanner.py
services/: alert_scheduler.py  dashboard_manager.py  notification_service.py  saved_search_analytics.py  saved_search_manager.py  subscription_manager.py  usage_metering.py  widget_data_service.py
templates/: index.html  index_netflix.html
tests/: conftest.py  locustfile.py  test_ai_pipeline.py  test_api_saved_searches.py  test_db_postgres.py  test_notification_service.py  test_runner.py  test_saved_searches.py
(+101 files in other folders)
